--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.experimental</groupId>
 		<artifactId>spring-native-sample-parent</artifactId>
 		<version>0.12.0-SNAPSHOT</version>
-		<relativePath>../maven-parent/pom.xml</relativePath>
+		<relativePath>./maven-parent/pom.xml</relativePath>
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>cloud</artifactId>
