--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
